third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/assign_local_field_invalid.exp

Diagnostics:
error: cannot assign to borrowed local `s`
   ┌─ tests/reference-safety/v1-tests/assign_local_field_invalid.move:13:9
   │
12 │         let f = &s.f;
   │                 ----
   │                 ││
   │                 │previous local borrow
   │                 used by field borrow
13 │         s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^ attempted to assign here
14 │         *f;
   │         -- conflicting reference `f` used here

error: cannot assign to borrowed local `s`
   ┌─ tests/reference-safety/v1-tests/assign_local_field_invalid.move:19:9
   │
18 │         let f = &mut s.f;
   │                 --------
   │                 │    │
   │                 │    previous mutable local borrow
   │                 used by mutable field borrow
19 │         s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^ attempted to assign here
20 │         *f;
   │         -- conflicting reference `f` used here

error: cannot assign to borrowed local `s`
   ┌─ tests/reference-safety/v1-tests/assign_local_field_invalid.move:25:9
   │
24 │         let f = id(&s.f);
   │                    ----
   │                    ││
   │                    │previous local borrow
   │                    used by field borrow
25 │         s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^ attempted to assign here
26 │         *f;
   │         -- conflicting reference `f` used here

error: cannot assign to borrowed local `s`
   ┌─ tests/reference-safety/v1-tests/assign_local_field_invalid.move:31:9
   │
30 │         let f = id_mut(&mut s.f);
   │                        --------
   │                        │    │
   │                        │    previous mutable local borrow
   │                        used by mutable field borrow
31 │         s = S { f: 0, g: 0 };
   │         ^^^^^^^^^^^^^^^^^^^^ attempted to assign here
32 │         *f;
   │         -- conflicting reference `f` used here
